--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>3.0.0</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>io.springfox</groupId>-->
+<!--			<artifactId>springfox-boot-starter</artifactId>-->
+<!--			<version>${springfox-swagger.version}</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-spring-web</artifactId>
